--- a/packages/components/src/local/perception-form/styles.module.scss
+++ b/packages/components/src/local/perception-form/styles.module.scss
@@ -1,59 +1,63 @@
 @import "~@serge/themes/dependencies/variables";
 
 .fieldset {
-    border: none;
+  border: transparent;
 
-    input, label, div, svg{
-        color: white !important;
-    }
+  input,
+  label,
+  div,
+  svg {
+    color: #fff !important;
+  }
 }
 
-.select{
-    width:180px;
+.select {
+  width: 180px;
 }
 
 .input-container {
-    display: flex;
-    background-color: #565656;
-    align-items: baseline;
-    justify-content: space-around;
-    padding: inherit;
-    border-radius: 1vmin;
-    margin-top: 1vmin;
+  display: flex;
+  background-color: #565656;
+  align-items: baseline;
+  justify-content: space-around;
+  padding: inherit;
+  border-radius: 1vmin;
+  margin-top: 1vmin;
 
-    h2 {
-        @include typo-primary;
-        font-size: 0.8rem;
-        font-weight: 700;
-        color: white;
-        text-transform: uppercase;
-        padding-left: 1vmin;
-        padding-right: 1vmin;
-    }
-    
-    div::before, * > div::before{
-        border-bottom-color: white !important;
-    } 
-
-    & > div {
-        max-width:180px;
-    }
-}  
-        
-.form-header {
+  h2 {
     @include typo-primary;
-    display: inline-block;
+    font-size: 0.8rem;
     font-weight: 700;
-    margin: 1rem 1rem 0.5rem 0.5rem;
-    color: white;
+    color: #fff;
+    text-transform: uppercase;
+    padding-left: 1vmin;
+    padding-right: 1vmin;
+  }
+
+  div::before,
+  * > div::before {
+    border-bottom-color: #fff !important;
+  }
+
+  > div {
+    max-width: 180px;
+  }
+}
+
+.form-header {
+  @include typo-primary;
+  display: inline-block;
+  font-weight: 700;
+  margin: 1rem 1rem 0.5rem 0.5rem;
+  color: #fff;
 }
 
 .button {
-    align-self: flex-end;
-    background-color: #54667c !important;
-    margin: 0rem 0.5rem 1rem 1rem !important;
-    color: white !important;
-    padding:2px 8px !important;
+  align-self: flex-end;
+  background-color: #54667c !important;
+  margin: 0 0.5rem 1rem 1rem !important;
+  color: #fff !important;
+  padding: 2px 8px !important;
 }
 
 .asset-icon {
@@ -64,14 +68,14 @@
   background-size: 80%;
   box-shadow: 3px 3px 2px rgba(0, 0, 0, 0.25);
   border: 1px solid hsla(0, 0%, 100%, 0.6);
-  &.selected {
-    border: 4px solid rgba(255, 255, 255, 0.7);
-  }
   width: 40px;
   height: 40px;
   margin-top: 0.8px;
-  top:10px;
-  right:20px;
+  top: 10px;
+  right: 20px;
+  &.selected {
+    border: 4px solid rgba(255, 255, 255, 0.7);
+  }
 }
 
 .blue {
