add button sizes, update world-state fonts and button, update map-barr form iner borders, add condition field

--- a/packages/components/src/local/map-bar/styles.module.scss
+++ b/packages/components/src/local/map-bar/styles.module.scss
@@ -34,10 +34,10 @@
   left: 0;
   max-height: 1345px;
   overflow-y: auto;
-  border-top: 1px solid #0a2c41;
-  border-left: 1px solid #0a2c41;
-  border-right: 2px solid #0a2c41;
-  border-bottom: 2px solid #0a2c41;
+  border-top: 2px solid #3DD0FF;
+  border-left: 1px solid #3DD0FF;
+  border-right: 2px solid #3DD0FF;
+  border-bottom: 1px solid #3DD0FF;
 }
 
 .open {
