--- a/packages/components/src/local/form-elements/button/styles.module.scss
+++ b/packages/components/src/local/form-elements/button/styles.module.scss
@@ -29,3 +29,12 @@
   color: #999;
   cursor: unset;
 }
+.s {
+  // default
+}
+
+.m {
+  font-size: 1.125rem;
+  line-height: 1.2;
+  padding: 0.375rem 1rem;
+}
