--- a/packages/components/src/local/map-bar/styles.module.scss
+++ b/packages/components/src/local/map-bar/styles.module.scss
@@ -34,10 +34,10 @@
   left: 0;
   max-height: 1345px;
   overflow-y: auto;
-  border-top: 2px solid #3DD0FF;
-  border-left: 1px solid #3DD0FF;
-  border-right: 2px solid #3DD0FF;
-  border-bottom: 1px solid #3DD0FF;
+  border-top: 2px solid #3dd0ff;
+  border-left: 1px solid #3dd0ff;
+  border-right: 2px solid #3dd0ff;
+  border-bottom: 1px solid #3dd0ff;
 }
 
 .open {
