fix style issue

--- a/packages/client/public/leaflet.css
+++ b/packages/client/public/leaflet.css
@@ -554,12 +554,12 @@ svg.leaflet-image-layer.leaflet-interactive path {
 
 
 /* div icon */
-
+/*
 .leaflet-div-icon {
 	background: #fff;
 	border: 1px solid #666;
 	}
-
+*/
 
 /* Tooltip */
 /* Base styles for the element that has a tooltip */
