--- a/packages/client/src/Components/Mapping/leaflet.css
+++ b/packages/client/src/Components/Mapping/leaflet.css
@@ -532,12 +532,12 @@
 
 
 /* div icon */
-
+/*
 .leaflet-div-icon {
 	background: #fff;
 	border: 1px solid #666;
-	}
-
+}
+*/
 
 /* Tooltip */
 /* Base styles for the element that has a tooltip */
