--- a/packages/client/public/leaflet.css
+++ b/packages/client/public/leaflet.css
@@ -561,6 +561,10 @@ svg.leaflet-image-layer.leaflet-interactive path {
 	}
 */
 
+.leaflet-div-icon text {
+	color: #000;
+}
+
 /* Tooltip */
 /* Base styles for the element that has a tooltip */
 .leaflet-tooltip {
