--- a/packages/client/src/Components/Mapping/leaflet.css
+++ b/packages/client/src/Components/Mapping/leaflet.css
@@ -539,6 +539,10 @@
 }
 */
 
+.leaflet-div-icon text {
+	color: #000;
+}
+
 /* Tooltip */
 /* Base styles for the element that has a tooltip */
 .leaflet-tooltip {
