autofix and map controll panel

--- a/packages/components/src/local/map-control/helpers/item/styles.module.scss
+++ b/packages/components/src/local/map-control/helpers/item/styles.module.scss
@@ -2,7 +2,7 @@
   display: block;
   text-align: center;
   text-decoration: none;
-  color: black;
+  color: #000;
   width: 24px;
   height: 24px;
   line-height: 24px;
@@ -11,7 +11,7 @@
   font-weight: 300;
   font-family: "Roboto", "Helvetica", "Arial", sans-serif;
   cursor: pointer;
-  border: 2px solid #CCCCCC;
+  border: 2px solid #ccc;
   border-top-width: 0;
   border-bottom-width: 1px;
   box-sizing: content-box;
