--- a/packages/components/src/local/map-control/helpers/item/styles.module.scss
+++ b/packages/components/src/local/map-control/helpers/item/styles.module.scss
@@ -6,7 +6,6 @@
   width: 24px;
   height: 24px;
   line-height: 24px;
-  background-color: #fff;
   margin: 0;
   font-weight: 300;
   font-family: "Roboto", "Helvetica", "Arial", sans-serif;
@@ -25,8 +24,20 @@
     border-bottom-width: 2px;
     border-radius: 0 0 2px 2px;
   }
+
+
 }
 
-.main:hover {
-  background-color: #f4f4f4;
+.light-content {
+  background-color: #333e;
+  border-color: #fff;
+  &:hover {
+    background-color: #222;
+  }
+}
+.dark-content {
+  background-color: #fffe;
+  &:hover {
+    background-color: #f4f4f4;
+  }
 }
