update dark box border color

--- a/packages/components/src/local/map-control/helpers/item/styles.module.scss
+++ b/packages/components/src/local/map-control/helpers/item/styles.module.scss
@@ -28,7 +28,7 @@
 
 .light-content {
   background-color: #333e;
-  border-color: #fff;
+  border-color: #222;
   &:hover {
     background-color: #222;
   }
