make UAS icon file name match the platform-type

--- a/packages/components/src/local/asset-icon/styles.module.scss
+++ b/packages/components/src/local/asset-icon/styles.module.scss
@@ -39,9 +39,10 @@
   z-index: 999;
 }
 
-$platforms: frigate, destroyer, mcmv, unknown, agi, fast-attack-craft, uas,
-  merchant-vessel, fixed-wing-aircraft, fishing-vessel, missile, helicopter,
-  boghammer, coastal-radar-site, datum, torpedo, pirate, mine, task-group;
+$platforms: frigate, destroyer, mcmv, unknown, agi, fast-attack-craft, 
+  unmanned-airborne-vehicle, merchant-vessel, fixed-wing-aircraft, 
+  fishing-vessel, missile, helicopter, boghammer, coastal-radar-site, 
+  datum, torpedo, pirate, mine, task-group;
 
 @each $platform in $platforms {
   .platform-type-#{$platform} {
