Make planning/perception forms have consistent styling

--- a/packages/components/src/local/form/styles.module.scss
+++ b/packages/components/src/local/form/styles.module.scss
@@ -14,14 +14,14 @@
 }
 
 .planning {
-  background-color: #1a394d;
+  background-color: #54667c;
 }
 .adjudication {
   background-color: #fafad2;
 }
 
 .perceived-as {
-  background-color: #434343;
+  background-color: #1a394d;
   color: #fff;
   bottom: 0;
   z-index: 1010;
