put white box around color shades, to improve contrast

--- a/packages/components/src/local/form-elements/rcb/styles.module.scss
+++ b/packages/components/src/local/form-elements/rcb/styles.module.scss
@@ -2,7 +2,7 @@
   display: inline-block;
   width: 25px;
   height: 1rem;
-  border: 1px solid #222;
+  border: 2px solid #fff;
   /* Show grey if no colour is specified */
   background-color: #ccc;
   vertical-align: middle;
