--- a/packages/components/src/local/helper-elements/dropzone/styles.module.scss
+++ b/packages/components/src/local/helper-elements/dropzone/styles.module.scss
@@ -1,17 +1,54 @@
 .main {
-  min-height: 40px;
   position: relative;
 }
 
+.main-empty {
+  height: 0;
+  overflow: hidden;
+  transition: height linear 400ms;
+  background-color: green;
+}
+
+.main-active {
+  height: 44px;
+}
+
+.empty-active {
+  height: 44px;
+}
+
 .dropzone {
-  background-color: rgba(100,100,100,.5);
-  border-radius: 2px;
   position: absolute;
   top: 0;
   left: 0;
   box-sizing: border-box;
   height: 100%;
-  width: 100%
+  width: 100%;
+  padding: 1px 0;
+
+  &:before {
+    display: block;
+    content: "";
+    width: 100%;
+    height: 100%;
+    border-radius: 2px;
+  }
+}
+
+.dropzone-active {
+  &:before {
+    background-color: rgba(100,100,100,.3);
+  }
+}
+
+.item {
+  position: absolute;
+  top: 0;
+  left: 0;
+  box-sizing: border-box;
+  height: 100%;
+  width: 100%;
+  padding: 1px 0;
 }
 
 .collapse {
@@ -19,5 +56,12 @@
 }
 
 .holder {
-  min-height: 40px;
+  min-height: 44px;
+  & > div {
+    min-height: 44px;
+  }
+}
+
+.loading {
+  opacity: 0.5;
 }
