--- a/packages/components/src/local/helper-elements/dropzone/styles.module.scss
+++ b/packages/components/src/local/helper-elements/dropzone/styles.module.scss
@@ -6,7 +6,6 @@
   height: 0;
   overflow: hidden;
   transition: height linear 400ms;
-  background-color: green;
 }
 
 .main-active {
@@ -25,20 +24,6 @@
   height: 100%;
   width: 100%;
   padding: 1px 0;
-
-  &:before {
-    display: block;
-    content: "";
-    width: 100%;
-    height: 100%;
-    border-radius: 2px;
-  }
-}
-
-.dropzone-active {
-  &:before {
-    background-color: rgba(100,100,100,.3);
-  }
 }
 
 .item {
@@ -49,6 +34,7 @@
   height: 100%;
   width: 100%;
   padding: 1px 0;
+  background-color: rgba(255,255,255,0.7);
 }
 
 .collapse {
@@ -64,4 +50,50 @@
 
 .loading {
   opacity: 0.5;
+}
+
+.content {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  line-height: 20px;
+  font-size: 14px;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  border-radius: 5px;
+
+  span,
+  svg {
+    display: block;
+  }
+
+  div {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: nowrap;
+  }
+}
+
+.switchitem {
+  opacity: 0;
+  transition: opacity 300ms linear;
+}
+
+.switch {
+  opacity: 1;
+}
+
+.content-empty {
+  background-color: #555;
+}
+
+.content-group {
+  background-color: rgba(0,0,0,0);
+}
+
+.overlap {
+  z-index: 15;
 }
