plan routes using asset color

--- a/packages/components/src/local/hex-grid/styles.module.scss
+++ b/packages/components/src/local/hex-grid/styles.module.scss
@@ -6,26 +6,26 @@
 }
 
 .allowable-hex {
-  fill: #ccc;
+/*  fill: #555; */
   stroke: #fff;
   opacity: 1;
   stroke-width: 2;
 }
 
 .planned-hex {
-  fill: #249;
+/*  fill: #249; */
   stroke: #fff;
   opacity: 1;
   stroke-width: 2;
 }
 
 .planned-line {
-  stroke: #249;
+/*  stroke: #249; */
   stroke-width: 4;
 }
 
 .planning-line {
-  stroke: #249;
+/*  stroke: #249; */
   stroke-width: 2;
 }
 
