--- a/packages/components/src/local/helper-elements/groups/styles.module.scss
+++ b/packages/components/src/local/helper-elements/groups/styles.module.scss
@@ -1,13 +1,13 @@
 .main {
   position: relative;
 
-  & > ul {
+  > ul {
     list-style: none;
     z-index: 1;
     padding: 0;
   }
 
-  & > div {
+  > div {
     z-index: 2;
   }
 }
