make button color little lighter, so it shows in reverse text

--- a/packages/components/src/local/map-control/helpers/item/styles.module.scss
+++ b/packages/components/src/local/map-control/helpers/item/styles.module.scss
@@ -2,7 +2,7 @@
   display: block;
   text-align: center;
   text-decoration: none;
-  color: #000;
+  color: #54667c;
   width: 24px;
   height: 24px;
   line-height: 24px;
