layout, content sections, tabs, editable list

--- a/packages/components/src/local/game-admin/layout/styles.module.scss
+++ b/packages/components/src/local/game-admin/layout/styles.module.scss
@@ -26,6 +26,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
+  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
 }
 
 .link {
