--- a/packages/components/src/local/game-admin/content/styles.module.scss
+++ b/packages/components/src/local/game-admin/content/styles.module.scss
@@ -9,7 +9,7 @@
   width: 25%;
   height: 100%;
   overflow-y: auto;
-  border-right: 2px solid #BEBEBE;
+  border-right: 2px solid #bebebe;
   padding: 20px 0;
 }
 .right {
