--- a/packages/components/src/local/game-admin/editable-list/styles.module.scss
+++ b/packages/components/src/local/game-admin/editable-list/styles.module.scss
@@ -15,7 +15,7 @@
   }
 
   li:hover {
-    background-color: #F6F6F6;
+    background-color: #f6f6f6;
 
     span {
       display: flex;
@@ -33,11 +33,11 @@
   span div {
     cursor: pointer;
     padding: 10px;
-    color: #C4C4C4;
+    color: #c4c4c4;
   }
 
   span div:hover {
-    color: #A0A0A0;
+    color: #a0a0a0;
   }
 }
 
