--- a/packages/components/src/local/form-elements/form-group-shadow/styles.module.scss
+++ b/packages/components/src/local/form-elements/form-group-shadow/styles.module.scss
@@ -1,5 +1,5 @@
 .main {
-  background-color: #F1F1F1;
+  background-color: #f1f1f1;
   font-family: "Roboto", "Helvetica", "Arial", sans-serif;
   padding: 20px;
   border-radius: 5px;
@@ -13,5 +13,5 @@
 }
 
 .content {
-    padding: 15px 0;
+  padding: 15px 0;
 }
