--- a/packages/components/src/local/game-admin/platform-types/styles.module.scss
+++ b/packages/components/src/local/game-admin/platform-types/styles.module.scss
@@ -43,7 +43,7 @@
   text-align: center;
   font-size: 14px;
   line-height: 20px;
-  color: #1A394D;
+  color: #1a394d;
   padding-bottom: 22px;
 }
 
