Game admin components refactor: - Implement mark all as read callback - Refactor into atomic structures

--- a/packages/components/src/local/molecules/admin-message/styles.module.scss
+++ b/packages/components/src/local/molecules/admin-message/styles.module.scss
@@ -1,4 +1,4 @@
-@import "~@serge/themes/dependencies/variables";
+@import "../../../../../../node_modules/@serge/themes/dependencies/variables";
 
 .info-wrap {
   overflow: hidden;
