--- a/packages/components/src/local/molecules/turn-progression/styles.module.scss
+++ b/packages/components/src/local/molecules/turn-progression/styles.module.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: row;
   flex-grow: 1;
+  @include typo-primary;
 }
 
 .turn-progression-ui {
@@ -58,6 +59,7 @@
     color: $action-secondary-color;
     font-size: 14px;
     font-weight: 700;
+    margin: 0;
   }
 
   time {
