--- a/packages/components/src/local/molecules/insight-form/styles.module.scss
+++ b/packages/components/src/local/molecules/insight-form/styles.module.scss
@@ -1,24 +1,11 @@
 @import '~@serge/themes/dependencies/variables';
 
-.lessons-modal {
+.insight-form {
   max-width: 500px;
-
-  .title {
-    align-items: flex-start;
-    display: flex;
-    flex-direction: row;
-  }
+  @include typo-primary;
 
   svg {
     color: $primary-color;
-  }
-  h3 {
-    background-color: transparent;
-    display: inline;
-    font-weight: bold;
-    line-height: 1em;
-    margin-left: 0.5em;
-    width: fit-content;
   }
 
   p {
@@ -27,5 +14,28 @@
 
   textarea {
     resize: none;
+  }
+}
+
+.insight-title {
+  align-items: flex-start;
+  display: flex;
+  flex-direction: row;
+
+  h3 {
+    background-color: transparent;
+    display: inline;
+    font-size: 1.75rem;
+    font-weight: bold;
+    line-height: 1em;
+    margin: 0;
+    margin-left: 0.5em;
+    width: fit-content;
+  }
+}
+
+.btn-cancel {
+  span {
+    color: $action-secondary-color;
   }
 }
