--- a/packages/components/src/local/atoms/input-container/styles.module.scss
+++ b/packages/components/src/local/atoms/input-container/styles.module.scss
@@ -1,4 +1,4 @@
-@import "../../../../../../node_modules/@serge/themes/dependencies/variables";
+@import "~@serge/themes/dependencies/variables";
 .input-container {
   padding: 1rem;
 
