--- a/packages/components/src/local/molecules/force-objective/styles.module.scss
+++ b/packages/components/src/local/molecules/force-objective/styles.module.scss
@@ -1,6 +1,7 @@
-@import '~@serge/themes/dependencies/variables';
+@import "~@serge/themes/dependencies/variables";
 
 .force-objectives {
+  @include typo-primary;
   background: $admin-color;
   border: 1px solid $force-default-color;
   border-radius: 4px 0 0;
@@ -13,8 +14,7 @@
   bottom: 0;
   z-index: 1000;
   position: relative;
-  color: #ffffff;
-  @include typo-primary;
+  color: #fff;
 
   .objective-text {
     margin-top: 15px;
