--- a/packages/components/src/local/molecules/channel-message-detail/styles.module.scss
+++ b/packages/components/src/local/molecules/channel-message-detail/styles.module.scss
@@ -15,6 +15,16 @@
   + .detail {
     margin-left: 16px;
   }
+
+  a,
+  a:visited {
+    color: $primary-triad-color;
+    text-decoration: none;
+  }
+
+  a:hover {
+    color: $action-secondary-color;
+  }
 }
 
 .detail {
