--- a/packages/components/src/local/organisms/channel-messages-list/styles.module.scss
+++ b/packages/components/src/local/organisms/channel-messages-list/styles.module.scss
@@ -1,3 +1,5 @@
+@import '~@serge/themes/dependencies/variables';
+
 .messages-list {
   max-height: calc(100vh - 165px);
   overflow-y: scroll;
@@ -14,4 +16,5 @@
   padding-top: 4px;
   text-align: right;
   width: 100%;
+  @include typo-primary;
 }
