--- a/packages/components/src/local/organisms/channel-messages-list/styles.module.scss
+++ b/packages/components/src/local/organisms/channel-messages-list/styles.module.scss
@@ -1,4 +1,4 @@
-@import '~@serge/themes/dependencies/variables';
+@import "~@serge/themes/dependencies/variables";
 
 .messages-list {
   max-height: calc(100vh - 165px);
@@ -8,6 +8,7 @@
 }
 
 .turn-marker {
+  @include typo-primary;
   color: rgba(255, 255, 255, 0.3);
   display: block;
   font-size: 12px;
@@ -16,5 +17,4 @@
   padding-top: 4px;
   text-align: right;
   width: 100%;
-  @include typo-primary;
 }
