Game Admin - condense top bar

--- a/packages/themes/_flex-layout.scss
+++ b/packages/themes/_flex-layout.scss
@@ -58,7 +58,7 @@
 
     &--row {
       flex-direction: row;
-      margin-bottom: 2.75em;
+      margin-bottom: 0;
 
       .column {
         flex-direction: column;
