--- a/packages/themes/_playerUi.scss
+++ b/packages/themes/_playerUi.scss
@@ -68,6 +68,21 @@
   }
 }
 
+#setup-title-editable {
+  background: transparent;
+  border: 0;
+  color: rgba(255, 255, 255, 0.7);
+  display: inline-block;
+  font-family: "Open Sans", sans-serif;
+  font-size: 1.85em;
+  font-weight: 500;
+  text-overflow: ellipsis;
+  width: 300px;
+
+  &.input-game-title {
+    color: $admin-color;
+  }
+}
 #title-editable {
   background: transparent;
   border: 0;
