Correctly name elements

--- a/packages/themes/_playerUi.scss
+++ b/packages/themes/_playerUi.scss
@@ -86,6 +86,7 @@
 #title-editable {
   background: transparent;
   border: 0;
+  color: rgba(20, 20, 20, 0.7);
   display: inline-block;
   font-family: "Open Sans", sans-serif;
   font-size: 1.85em;
