--- a/packages/components/src/local/game-admin/colorpicker/styles.module.scss
+++ b/packages/components/src/local/game-admin/colorpicker/styles.module.scss
@@ -7,13 +7,13 @@
   padding: 5px;
   background: #fff;
   border-radius: 1px;
-  box-shadow: 0 0 0 1px rgba(0,0,0,.1);
+  box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1);
   display: inline-block;
   cursor: pointer;
 }
 .popover {
   position: absolute;
-  zIndex: 2;
+  z-index: 2;
 }
 .cover {
   position: fixed;
