Fixed UI issue wargame in progress

--- a/packages/themes/_progress.scss
+++ b/packages/themes/_progress.scss
@@ -12,6 +12,7 @@ $progress-height: 2px;
   padding: 5px 0;
   position: relative;
   width: fit-content;
+  top: 15px;
 
   &::after {
     align-self: center;
