Add wargame list component - in progress

--- a/packages/components/src/local/atoms/game-title/styles.module.scss
+++ b/packages/components/src/local/atoms/game-title/styles.module.scss
@@ -1,7 +1,14 @@
 @import '~@serge/themes/dependencies/variables';
 
 .wargame-title {
+  cursor: pointer;
+  display: block;
+  width: 100%;
   @include typo-primary;
+
+  &:hover {
+    color: $dark-grey;
+  }
 }
 
 .wargame-started-highlight {
