--- a/packages/components/src/local/molecules/option-menu/styles.module.scss
+++ b/packages/components/src/local/molecules/option-menu/styles.module.scss
@@ -1,6 +1,7 @@
-@import '~@serge/themes/dependencies/variables';
+@import "~@serge/themes/dependencies/variables";
 
 .wargame-option-menu {
+  @include typo-primary;
   background: #fff;
   border: 1px solid $grey;
   display: flex;
@@ -8,7 +9,6 @@
   height: auto;
   width: 160px;
   z-index: 3;
-  @include typo-primary;
 
   span {
     align-items: center;
