--- a/packages/components/src/local/organisms/wargame-list/styles.module.scss
+++ b/packages/components/src/local/organisms/wargame-list/styles.module.scss
@@ -36,7 +36,7 @@
   flex-grow: 2;
   height: 100%;
   max-height: calc(59vh - 153px);
-  overflow-y: scroll;
+  overflow-y: auto;
   padding-bottom: 100px;
 }
 
