--- a/packages/themes/_playerUi.scss
+++ b/packages/themes/_playerUi.scss
@@ -110,7 +110,9 @@
   max-height: 100vh;
   overflow: hidden;
   position: relative;
-
+  &.plainChatContainer{
+    border-left: solid 8px #0e3e6e;
+  }
   /* stylelint-disable */
   /* ignores js rendered class name */
   .unread,
