resolve component build issue

--- a/packages/components/src/local/molecules/channel-message-bubble/styles.module.scss
+++ b/packages/components/src/local/molecules/channel-message-bubble/styles.module.scss
@@ -47,7 +47,7 @@
   font-weight: 400;
   line-height: 1;
   margin-left: 6px;
-  color: #00A3DE;
+  color: #00a3de;
   order: 3;
 }
 
@@ -55,6 +55,6 @@
   font-size: 11px;
   margin-left: 6px;
 }
-.roleStyle{
+.roleStyle {
   background-color: red;
 }
