Participants and messages

--- a/packages/components/src/local/game-admin/channels/styles.module.scss
+++ b/packages/components/src/local/game-admin/channels/styles.module.scss
@@ -19,3 +19,14 @@
 .section {
   padding: 12px 0;
 }
+
+
+.table {
+  th {
+    font-weight: bold;
+  }
+
+  tfoot tr {
+    border-top: 1px solid #E0E0E0;
+  }
+}
