--- a/packages/components/src/local/game-admin/channels/styles.module.scss
+++ b/packages/components/src/local/game-admin/channels/styles.module.scss
@@ -20,13 +20,12 @@
   padding: 12px 0;
 }
 
-
 .table {
   th {
     font-weight: bold;
   }
 
   tfoot tr {
-    border-top: 1px solid #E0E0E0;
+    border-top: 1px solid #e0e0e0;
   }
 }
