--- a/packages/components/src/local/atoms/private-chat-text-input/styles.module.scss
+++ b/packages/components/src/local/atoms/private-chat-text-input/styles.module.scss
@@ -1,8 +1,26 @@
 .private-chat-text-input {
+  .header-collapsible {
+    cursor: pointer;
+  }
+  .icon-paperclip {
+    margin-right: 10px;
+  }
   .icon-private {
     padding-right: 5px;
   }
   .chat-text-input {
-    padding-top: 10px;
+    margin-top: 7px;
+    padding-left: 23px;
+    position: relative;
+  }
+  .chat-text-input::after {
+    content: '';
+    position: absolute;
+    height: 100%;
+    width: 4px;
+    background: #fff;
+    top: 0;
+    left: 3px;
+    border-radius: 4px;
   }
 }
