getting issue can't read property style of null

--- a/packages/components/src/local/atoms/private-chat-text-input/styles.module.scss
+++ b/packages/components/src/local/atoms/private-chat-text-input/styles.module.scss
@@ -14,7 +14,7 @@
     position: relative;
   }
   .chat-text-input::after {
-    content: '';
+    content: "";
     position: absolute;
     height: 100%;
     width: 4px;
