change style name, to avoid duplication/confusion

--- a/packages/components/src/local/molecules/write-message-panel/styles.module.scss
+++ b/packages/components/src/local/molecules/write-message-panel/styles.module.scss
@@ -1,6 +1,6 @@
 .write-message-panel {
   position: relative;
-  .private-chat-text-input {
+  .private-chat-text-block {
     padding-top: 13px;
   }
   .send-message-icon {
