--- a/packages/themes/_playerUi.scss
+++ b/packages/themes/_playerUi.scss
@@ -596,11 +596,15 @@
     margin-bottom: 18px;
   }
 
+  select.message-input:first-child {
+    margin-top: 18px;
+  }
+
   .btn {
     float: right;
   }
 
-  h3 > span {
+  h3 {
     display: none;
   }
 
